[Mac] Clean up SadTabView and let SadTabController provide its content

Prep for making the sad tab's content more dynamic, plus some touch-up
and shuffling of responsibilities.

- Adds methods to `SadTabView` to set the text of each interface element
  and the help URL, and makes `SadTabController` responsible for setting
  them. `SadTabView` still controls appearance and layout.

- Gives `SadTabView` a delegate to signal clicks. The button is now
  private, and tests now use a `WebContentsDelegate` to detect a click
  on the help link instead of extending `NSApplication`.

- Removes some uses of `scoped_nsobject` for instance variables that
  just need to be weak references.

BUG=623690

Review-Url: https://codereview.chromium.org/2247493003
Cr-Commit-Position: refs/heads/master@{#411932}

Former-commit-id: 7c635ed1edb8cbcb68fe5a0646cb554b8dd32b8a